--- a/bwm/a2.tex
+++ b/bwm/a2.tex
@@ -48,7 +48,7 @@ Die letzte Stelle der 4er-Gruppen an Faktoren am Ende kann auch bestimmt werden,
 	\end{equation*}
 \end{multicols}
 
-$\dots$ steht hierbei für beliebig viele Ziffern (innerhalb einer 4er-Gruppe sind diese immer gleich).
+\say{$\mathit{\dots}$} steht hierbei für beliebig viele Ziffern (innerhalb einer 4er-Gruppe sind diese immer gleich).
 \\[10pt]
 Hierbei spielt es keine Rolle, ob die Ziffern $\dots$ vor den Paaren $8$ und $6$ bzw. $4$ und $2$ gerade oder ungerade sind, da das Produkt des jeweiligen Paars immer auf die selbe Ziffer endet:
 \begin{multicols}{2}
@@ -115,14 +115,14 @@ Nun wird der Faktor $2^m$ genauer betrachtet:
 $\frac{n!}{(m\cdot5)!}$ kann nur folgende Werte annehmen:
 \begin{equation*}
 	\begin{split}
-		9\cdot8\cdot7\cdot6 &= 302\underline{4} \\
-		8\cdot7\cdot6 &= 33\underline{6} \\
-		7\cdot6 &= 4\underline{2} \\
-		6 &= \underline{6} \\
-		4\cdot3\cdot2\cdot1 &= 1\underline{2} \\
-		3\cdot2\cdot1 &= \underline{6} \\
-		2\cdot1 &= \underline{2} \\
-		1 &= \underline{1}
+		\dots9 \cdot \dots8 \cdot \dots7 \cdot \dots6 &= 302\underline{4} \\
+		\dots8 \cdot \dots7 \cdot \dots6 &= 33\underline{6} \\
+		\dots7 \cdot \dots6 &= 4\underline{2} \\
+		\dots6 &= \underline{6} \\
+		\dots4 \cdot \dots3 \cdot \dots2 \cdot \dots1 &= 1\underline{2} \\
+		\dots3 \cdot \dots2 \cdot \dots1 &= \underline{6} \\
+		\dots2 \cdot \dots1 &= \underline{2} \\
+		\dots1  &= \underline{1}
 	\end{split}
 \end{equation*}
 
