--- a/bwm/a3.tex
+++ b/bwm/a3.tex
@@ -28,7 +28,7 @@ Um zu beweisen, dass $AE$ senkrecht zu $CD$ steht, werden die Steigungen beider 
 \\[10pt]
 (Für die gesamte Herleitung beziehen sich, wenn nicht durch Klammern anders angegeben, $\sin$ und $\cos$ immer nur auf die Variable unmittelbar danach, also nur $\alpha$ oder $\beta$.)
 
-\subsection[]{Herleitung von $m_{AE}$}
+\subsection{Herleitung von $m_{AE}$}
 Hierfür relevante Punkte und Strecken:
 \begin{center}
 	\begin{tikzpicture}[scale=4]
@@ -164,7 +164,7 @@ Mit $ \cosb = \frac{b}{r} \Leftrightarrow b = r \cosb $ und $(1)$:
 \end{samepage}
 
 \pagebreak
-\subsection[]{Herleitung von $m_{CD}$}
+\subsection{Herleitung von $m_{CD}$}
 Hierfür relevante Punkte und Strecken:
 
 \begin{center}
