formulierung gefixt, und meine sorge war komplett unbegründet das stimmt straight up nicht

--- a/bwm/a3.tex
+++ b/bwm/a3.tex
@@ -291,7 +291,7 @@ Mit $(2)$, $(3^\prime)$ und $(4)$: \nopagebreak
 	&= -\frac{1+\sina}{\sqrt{1 - \sin^2\alpha}} \\
 	&= -\frac{\sina+1}{\sqrt{\cos^2\alpha}}
 \end{align*}
-Da unser $\alpha \leq \ang{90}$, gilt auch $\left|\cosa\right| = \cosa$:
+Da $\alpha \leq \ang{90}$ gilt, folgt analog zu zuvor $\left|\cosa\right| = \cosa$:
 \begin{align*}
 	m_{CD} &= -\frac{\sina+1}{\cosa}
 \end{align*}
