--- a/bwm/a1.tex
+++ b/bwm/a1.tex
@@ -6,11 +6,8 @@ Für eine so gegebene beliebige Reihenfolge der Zahlen $1$ bis $9$ lässt sich d
 \begin{align*}
 	d &= i_1 + i_9 + \sum_{k=1}^{8} |i_{k+1} - i_k|
 \end{align*}
-
-\begin{itemize}
-	\item[a)] Ein Beispiel für eine Sprungfolge mit der Gesamtdistanz $20$ ist \\
-	$1, 2, 3, 4, 5, 6, 8, 7, 9$ (gefunden durch Ausprobieren):
-\end{itemize}
+\Fburg{a)} Ein Beispiel für eine Sprungfolge mit der Gesamtdistanz $20$ ist \\
+$1, 2, 3, 4, 5, 6, 8, 7, 9$ (gefunden durch Ausprobieren):
 \begin{align*}
 	d &= 1 + 9 + |2-1|+|3-2|+|4-3|+|5-4| \\
 	&+ |6-5|+|8-6|+|7-8|+|9-7| \\
@@ -38,6 +35,5 @@ $2 i_9$ ist immer gerade, also gilt:
 \end{align*}
 
 Folglich ist $d$ für alle Sprungreihenfolgen eine gerade Zahl.
-\begin{itemize}
-	\item[b)] Die zurückgelegte Strecke kann also nie $25$ Längeneinheiten betragen. \qed
-\end{itemize}
+\\
+\Fburg{b)} Die zurückgelegte Strecke kann also nie $25$ Längeneinheiten betragen. \qed
