--- a/bwm/a4.tex
+++ b/bwm/a4.tex
@@ -157,10 +157,9 @@ Erhard (magenta) muss anfangen und Renate (türkis) kopiert solange seine Spielz
 \pagebreak
 
 Renate hat nun für zwei verschiedene Arten von Feldern Strategien:
-\begin{itemize}
-	\item[Fall 1:] $m=n$
-\end{itemize}
-
+\\[10pt]
+\Fburg{Fall 1:} $m=n$
+\\[10pt]
 Hierfür beginnt Renate mit dem Ausmalen eines einzelnen Feldes E in einer Ecke. Erhard kann in seinem nächsten Zug nur bis zu $n-1$ Felder auf genau einer Kante ausmalen. Renate wird solange mit jedem ihrer Züge das Spielfeld symmetrisch zur Spiegelachse, die die Strecke zwischen E und der Ecke diagonal gegenüber von E ist (eingezeichnet als gestrichelte Linie), halten, bis sich Erhard als Anfänger in einer $p\times p$-Ecke findet und verliert.
 \\[10pt]
 Ab dem zweiten Diagramm macht pro Bild immer erst Erhard (türkis) einen Zug, dann Renate (magenta):
@@ -303,11 +302,8 @@ Egal wieviele Felder Erhard in seinem nächsten Zug ausmalt, wird er in eine $p\
 	\draw [dashed] (7,0) -- (0,7);
 \end{tikzpicture}
 \end{NMCenter}
-
-\begin{itemize}
-	\item[Fall 2:] $m\neq n$
-\end{itemize}
-
+\Fburg{Fall 2:} $m\neq n$
+\\[10pt]
 Hierbei malt Renate in ihrem ersten Zug eine der längeren Kanten komplett aus. So bleibt als Spielfeld noch eine \say{Hufeisenform} übrig. Nach dem Beweis oben verliert der Anfänger (nach Renates Strategie also Erhard) in diesem Hufeisen auch (wie bereits oben gezeigt), Renate hat also hier auch eine sichere Gewinnstrategie (grau steht hier für beliebige Züge beider Seiten):
 \\
 \begin{NMCenter}
