--- a/bwm/a3.tex
+++ b/bwm/a3.tex
@@ -24,7 +24,7 @@
 \newcommand{\sinb}{\sin\beta}
 \newcommand{\cosb}{\cos\beta}
 
-Um zu beweisen, dass $AE$ senkrecht zu $CD$ steht, werden die Steigungen beider Geraden in Abhängigkeit des Winkels $\beta$, der die Position von P auf dem Halbkreisbogen $AB$ bestimmt, berechnet.
+Um zu beweisen, dass $AE$ senkrecht zu $CD$ steht, werden die Steigungen beider Strecken in Abhängigkeit des Winkels $\beta$, der die Position von P auf dem Halbkreisbogen $AB$ bestimmt, berechnet.
 \\[10pt]
 (Für die gesamte Herleitung beziehen sich, wenn nicht durch Klammern anders angegeben, $\sin$ und $\cos$ immer nur auf die Variable unmittelbar danach, also nur $\alpha$ oder $\beta$.)
 
